k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-webservice
  namespace: messaging-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
  labels:
    app: webservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webservice
  template:
    metadata:
      labels:
        app: webservice
    spec:
      serviceAccountName: messaging-service-account
      volumes:
      - name: app-logs
        emptyDir: {}
      - name: fluentd-config
        configMap:
          name: messaging-fluentd-configmap
      containers:
      - name: webservice
        image: ${image}
        volumeMounts:
          - mountPath: /var/log/webservice
            name: app-logs
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      - name: fluentd
        image: fluent/fluent-bit
        volumeMounts:
          - mountPath: /var/log/webservice
            name: app-logs
          - mountPath: /fluent-bit/etc 
            name: fluentd-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
