k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: messaging-db
 namespace: messaging-app
spec:
 selector:
   matchLabels:
     app: mysql
 serviceName: messaging-db-service
 replicas: 1
 template:
   metadata:
     labels:
       app: mysql
   spec:
     serviceAccountName: messaging-service-account
     terminationGracePeriodSeconds: 60
    #  volumes:
    #   - name: mysql-conf
    #     configMap:
    #       name: messaging-db-configmap
     containers:
     - name: mysql
       image: mysql:8
       ports:
       - containerPort: 3306
         name: mysql
       volumeMounts:
       - mountPath: /var/lib/mysql
         name: data
      #  - mountPath: /etc/mysql/conf.d
      #    name: mysql-conf
 volumeClaimTemplates:
 - metadata:
     name: data
   spec:
     storageClassName: ebs-sc
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 30Gi
