k8s/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-db-service
  namespace: messaging-app
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
