k8s/webservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: messaging-app
spec:
  selector:
    app: webservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
